ops-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "ph-ee-operations-app"
  labels:
    app: ph-ee-operations-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ph-ee-operations-app
  template:
    metadata:
      labels:
        app: ph-ee-operations-app
    spec:
      containers:
        - name: ph-ee-operations-app
          image: subhampramanik/ph-ee-operations-app-auth:1.3
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /oauth/token_key
              port: 5000
            periodSeconds: 30
            timeoutSeconds: 5
          resources:
            limits:
              memory: "512M"
              cpu: "500m"
            requests:
              memory: "512M"
              cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ph-ee-operations-app
  name: ph-ee-operations-app
spec:
  ports:
    - name: port
      port: 80
      protocol: TCP
      targetPort: 5000
  selector:
    app: ph-ee-operations-app
  sessionAffinity: None
  type: ClusterIP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ph-ee-operations-app
  # annotations:
  #   konghq.com/plugins: request-transformer,oidc
spec:
  ingressClassName: kong
  rules:
    - host: ops-bk.sandbox.cribbi.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ph-ee-operations-app
                port:
                  number: 80
