ops-web.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ph-ee-operations-web
  labels:
    app: ph-ee-operations-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ph-ee-operations-web
  template:
    metadata:
      labels:
        app: ph-ee-operations-web
    spec:
      containers:
        - name: ph-ee-operations-web
          image: subhampramanik/ph-ee-ops-web-auth:1.3
          imagePullPolicy: Always
          ports:
            - containerPort: 4200
          resources:
            limits:
              memory: "512M"
              cpu: "500m"
            requests:
              memory: "512M"
              cpu: "100m"

---
apiVersion: v1
kind: Service
metadata:
  name: ph-ee-operations-web
spec:
  selector:
    app: ph-ee-operations-web
  ports:
    - protocol: TCP
      port: 4200

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ph-ee-operations-web
  # annotations:
  #   konghq.com/plugins: request-transformer,oidc
spec:
  ingressClassName: kong
  rules:
    - host: ops-web.sandbox.cribbi.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
               service: 
                name: ph-ee-operations-web
                port: 
                  number: 4200
